<resources>
    <string name="app_name">Hello1</string>
    <string name="ok">Ok</string>
    <string name="add">Add</string>
    <string name="sub">Subtract</string>
    <string name="multi">multi</string>
    <string name="div">div</string>
    <string name="ValutaCalc">Calculate</string>
    <string-array name="valuta_values">
        <item>7</item>
        <item>6</item>
        <item>1000</item>
    </string-array>
</resources>
